tests/ui/typeck/path-to-method-sugg-unresolved-expr.rs
fn main() {
    let page_size = page_size::get();
    //~^ ERROR cannot find item `page_size`
}
